# dynamic-library

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  lib.cpp  lib.h
subproject/: CMakeLists.txt
subproject/app/: CMakeLists.txt  main.cpp
subproject/lib/: lib.h
